--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -2419,39 +2419,134 @@
   MGE_MIL_cn_ADJ:0 "German"
   MGE_MIL_an_ADJ:0 "German"
 
-  MGE_ds_party_long:0 "Französische Militärverwawltung"
-  MGE_ds_party:0 "FM"
-  MGE_ni_party_long:0 "Nationale Kollektive Deutsche Partei"
-  MGE_ni_party:0 "NKDP"
+  ##########################
+  # FRENCH COLLABORATION IN ITALY
+  ##########################
 
-  PB_FRA_Partisans:0 "Deutsche Partisanenfront"
-  PB_FRA_Partisans_desc:0 "Due to the complete hatred of all Germans for the recent peace without honor against the French Republic, many have turned their heads towards their rifles, fighting a guerilla warfare against the German government in Nuremberg and destroying any supplylines and industry that could help the French war effort in Europe and Africa."
-  PB_MGE_German_Forces:0 "German Republican Forces"
-  PB_MGE_German_Forces_desc:0 "In an effort to help the French War Effort, the German Republic in Nuremberg has formed a formal republican army. The conscription of all Germans, while effectively enlarging our armed forces, has made the war extremely unpopular in almost every corner of the republic."
-  PB_MGE_Peace_1:0 "Peace of Nürnberg"
-  PB_MGE_Peace_1_desc:0 "With the final negotiations set, the peace is finalized. Germany shall be completely unable to field a proper army untill the treaty is out of effect and Germany will pay France 20% of its economy to repay for the damage done to the French people during the First and Second Great War."
+  IST_Armand_ni:0 "Free Workers State of Italy"
+  IST_Armand_ni_DEF:0 "Free Workers State of Italy"
+  IST_Armand_ds:0 "Free Workers State of Italy"
+  IST_Armand_ds_DEF:0 "Free Workers State of Italy"
+  IST_Armand_rc:0 "Free Workers State of Italy"
+  IST_Armand_rc_DEF:0 "Free Workers State of Italy"
+  IST_Armand_an:0 "Free Workers State of Italy"
+  IST_Armand_an_DEF:0 "Free Workers State of Italy"
+  IST_Armand_cn:0 "Free Workers State of Italy"
+  IST_Armand_cn_DEF:0 "Free Workers State of Italy"
+  IST_Armand_lb:0 "Free Workers State of Italy"
+  IST_Armand_lb_DEF:0 "Free Workers State of Italy"
+  IST_Armand_ss:0 "Free Workers State of Italy"
+  IST_Armand_ss_DEF:0 "Free Workers State of Italy"
+  IST_Armand_jc:0 "Free Workers State of Italy"
+  IST_Armand_jc_DEF:0 "Free Workers State of Italy"
+  IST_Armand_ni_ADJ:0 "Italian"
+  IST_Armand_rc_ADJ:0 "Italian"
+  IST_Armand_lb_ADJ:0 "Italian"
+  IST_Armand_ss_ADJ:0 "Italian"
+  IST_Armand_jc_ADJ:0 "Italian"
+  IST_Armand_ds_ADJ:0 "Italian"
+  IST_Armand_cn_ADJ:0 "Italian"
+  IST_Armand_an_ADJ:0 "Italian"
 
-  MGE_peace_of_nuremberg:0 "Peace of Nürnberg"
-  MGE_the_military:0 "Armed Forces against Victorianism"
-  MGE_the_economy:0 "German Workers Front"
-  MGE_rebuild_germany:0 "Reconstruct Fort Germany"
-  MGE_adress_the_partisan_issue:0 "Adress the Partisan Issue"
-  MGE_supply_the_french_war_effort:0 "Supply the French War Effort"
-  MGE_heavy_industry_zones:0 "Expand The Brandenburg War Industry"
-  MGE_trains_to_paris:0 "Daily Trains to Paris"
-  MGE_reconnect_civilian_roads:0 "Reconnect Civilian Roads"
-  MGE_redistribute_food_to_civilians:0 "Combat Creeping Famine"
-  MGE_wartime_autarky:0 "War Imperialism"
-  MGE_search_for_agreement:0 "The Kaiserliche Telegram"
-  MGE_crush_partisans:0 "Campaign against Partisans"
-  MGE_meeting_at_nuremberg:0 "Unity in Germany?"
-  MGE_use_french_renaults:0 "Buy Renault landships"
-  MGE_expand_upon_artillery_usage:0 "The Singing Guns"
-  MGE_french_ace_warfare:0 "Promote Individual Combat"
-  MGE_austrian_traditions:0 "Faceless Warfare"
-  MGE_one_gun_two_men:0 "Every Two Man a Gun"
-  MGE_keep_german_tactics:0 "German Republican Forces"
-  MGE_adopt_french_tactics:0 "The Charlamagne Divisions"
+  IST_Doriot_ni:0 "Italian Social Republic"
+  IST_Doriot_ni_DEF:0 "Italian Social Republic"
+  IST_Doriot_ds:0 "Italian Social Republic"
+  IST_Doriot_ds_DEF:0 "Italian Social Republic"
+  IST_Doriot_rc:0 "Italian Social Republic"
+  IST_Doriot_rc_DEF:0 "Italian Social Republic"
+  IST_Doriot_an:0 "Italian Social Republic"
+  IST_Doriot_an_DEF:0 "Italian Social Republic"
+  IST_Doriot_cn:0 "Italian Social Republic"
+  IST_Doriot_cn_DEF:0 "Italian Social Republic"
+  IST_Doriot_lb:0 "Italian Social Republic"
+  IST_Doriot_lb_DEF:0 "Italian Social Republic"
+  IST_Doriot_ss:0 "Italian Social Republic"
+  IST_Doriot_ss_DEF:0 "Italian Social Republic"
+  IST_Doriot_jc:0 "Italian Social Republic"
+  IST_Doriot_jc_DEF:0 "Italian Social Republic"
+  IST_Doriot_ni_ADJ:0 "Italian"
+  IST_Doriot_rc_ADJ:0 "Italian"
+  IST_Doriot_lb_ADJ:0 "Italian"
+  IST_Doriot_ss_ADJ:0 "Italian"
+  IST_Doriot_jc_ADJ:0 "Italian"
+  IST_Doriot_ds_ADJ:0 "Italian"
+  IST_Doriot_cn_ADJ:0 "Italian"
+  IST_Doriot_an_ADJ:0 "Italian"
+
+  IST_SP_ni:0 "Latin Empire"
+  IST_SP_ni_DEF:0 "Latin Empire"
+  IST_SP_ds:0 "Latin Empire"
+  IST_SP_ds_DEF:0 "Latin Empire"
+  IST_SP_rc:0 "Latin Empire"
+  IST_SP_rc_DEF:0 "Latin Empire"
+  IST_SP_an:0 "Latin Empire"
+  IST_SP_an_DEF:0 "Latin Empire"
+  IST_SP_cn:0 "Latin Empire"
+  IST_SP_cn_DEF:0 "Latin Empire"
+  IST_SP_lb:0 "Latin Empire"
+  IST_SP_lb_DEF:0 "Latin Empire"
+  IST_SP_ss:0 "Latin Empire"
+  IST_SP_ss_DEF:0 "Latin Empire"
+  IST_SP_jc:0 "Latin Empire"
+  IST_SP_jc_DEF:0 "Latin Empire"
+  IST_SP_ni_ADJ:0 "Latin"
+  IST_SP_rc_ADJ:0 "Latin"
+  IST_SP_lb_ADJ:0 "Latin"
+  IST_SP_ss_ADJ:0 "Latin"
+  IST_SP_jc_ADJ:0 "Latin"
+  IST_SP_ds_ADJ:0 "Latin"
+  IST_SP_cn_ADJ:0 "Latin"
+  IST_SP_an_ADJ:0 "Latin"
+
+  IST_Jean_ni:0 "Kingdom of Italy"
+  IST_Jean_ni_DEF:0 "Kingdom of Italy"
+  IST_Jean_ds:0 "Kingdom of Italy"
+  IST_Jean_ds_DEF:0 "Kingdom of Italy"
+  IST_Jean_rc:0 "Kingdom of Italy"
+  IST_Jean_rc_DEF:0 "Kingdom of Italy"
+  IST_Jean_an:0 "Kingdom of Italy"
+  IST_Jean_an_DEF:0 "Kingdom of Italy"
+  IST_Jean_cn:0 "Kingdom of Italy"
+  IST_Jean_cn_DEF:0 "Kingdom of Italy"
+  IST_Jean_lb:0 "Kingdom of Italy"
+  IST_Jean_lb_DEF:0 "Kingdom of Italy"
+  IST_Jean_ss:0 "Kingdom of Italy"
+  IST_Jean_ss_DEF:0 "Kingdom of Italy"
+  IST_Jean_jc:0 "Kingdom of Italy"
+  IST_Jean_jc_DEF:0 "Kingdom of Italy"
+  IST_Jean_ni_ADJ:0 "Italian"
+  IST_Jean_rc_ADJ:0 "Italian"
+  IST_Jean_lb_ADJ:0 "Italian"
+  IST_Jean_ss_ADJ:0 "Italian"
+  IST_Jean_jc_ADJ:0 "Italian"
+  IST_Jean_ds_ADJ:0 "Italian"
+  IST_Jean_cn_ADJ:0 "Italian"
+  IST_Jean_an_ADJ:0 "Italian"
+
+  IST_MIL_ni:0 "Italy"
+  IST_MIL_ni_DEF:0 "Italy"
+  IST_MIL_ds:0 "Italy"
+  IST_MIL_ds_DEF:0 "Italy"
+  IST_MIL_rc:0 "Italy"
+  IST_MIL_rc_DEF:0 "Italy"
+  IST_MIL_an:0 "Italy"
+  IST_MIL_an_DEF:0 "Italy"
+  IST_MIL_cn:0 "Italy"
+  IST_MIL_cn_DEF:0 "Italy"
+  IST_MIL_lb:0 "Italy"
+  IST_MIL_lb_DEF:0 "Italy"
+  IST_MIL_ss:0 "Italy"
+  IST_MIL_ss_DEF:0 "Italy"
+  IST_MIL_jc:0 "Italy"
+  IST_MIL_jc_DEF:0 "Italy"
+  IST_MIL_ni_ADJ:0 "Italian"
+  IST_MIL_rc_ADJ:0 "Italian"
+  IST_MIL_lb_ADJ:0 "Italian"
+  IST_MIL_ss_ADJ:0 "Italian"
+  IST_MIL_jc_ADJ:0 "Italian"
+  IST_MIL_ds_ADJ:0 "Italian"
+  IST_MIL_cn_ADJ:0 "Italian"
+  IST_MIL_an_ADJ:0 "Italian"
 
   ##########################
   # PARTIES
