--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -2549,6 +2549,85 @@
   IST_MIL_an_ADJ:0 "Italian"
 
   ##########################
+  # FRENCH COLLABORATION IN SPAIN
+  ##########################
+
+  SPR_Armand_ni:0 "Iberian Union"
+  SPR_Armand_ni_DEF:0 "Iberian Union"
+  SPR_Armand_ds:0 "Iberian Union"
+  SPR_Armand_ds_DEF:0 "Iberian Union"
+  SPR_Armand_rc:0 "Iberian Union"
+  SPR_Armand_rc_DEF:0 "Iberian Union"
+  SPR_Armand_an:0 "Iberian Union"
+  SPR_Armand_an_DEF:0 "Iberian Union"
+  SPR_Armand_cn:0 "Iberian Union"
+  SPR_Armand_cn_DEF:0 "Iberian Union"
+  SPR_Armand_lb:0 "Iberian Union"
+  SPR_Armand_lb_DEF:0 "Iberian Union"
+  SPR_Armand_ss:0 "Iberian Union"
+  SPR_Armand_ss_DEF:0 "Iberian Union"
+  SPR_Armand_jc:0 "Iberian Union"
+  SPR_Armand_jc_DEF:0 "Iberian Union"
+  SPR_Armand_ni_ADJ:0 "Iberian"
+  SPR_Armand_rc_ADJ:0 "Iberian"
+  SPR_Armand_lb_ADJ:0 "Iberian"
+  SPR_Armand_ss_ADJ:0 "Iberian"
+  SPR_Armand_jc_ADJ:0 "Iberian"
+  SPR_Armand_ds_ADJ:0 "Iberian"
+  SPR_Armand_cn_ADJ:0 "Iberian"
+  SPR_Armand_an_ADJ:0 "Iberian"
+
+  SPR_Doriot_ni:0 "Greater Iberia"
+  SPR_Doriot_ni_DEF:0 "Greater Iberia"
+  SPR_Doriot_ds:0 "Greater Iberia"
+  SPR_Doriot_ds_DEF:0 "Greater Iberia"
+  SPR_Doriot_rc:0 "Greater Iberia"
+  SPR_Doriot_rc_DEF:0 "Greater Iberia"
+  SPR_Doriot_an:0 "Greater Iberia"
+  SPR_Doriot_an_DEF:0 "Greater Iberia"
+  SPR_Doriot_cn:0 "Greater Iberia"
+  SPR_Doriot_cn_DEF:0 "Greater Iberia"
+  SPR_Doriot_lb:0 "Greater Iberia"
+  SPR_Doriot_lb_DEF:0 "Greater Iberia"
+  SPR_Doriot_ss:0 "Greater Iberia"
+  SPR_Doriot_ss_DEF:0 "Greater Iberia"
+  SPR_Doriot_jc:0 "Greater Iberia"
+  SPR_Doriot_jc_DEF:0 "Greater Iberia"
+  SPR_Doriot_ni_ADJ:0 "Iberian"
+  SPR_Doriot_rc_ADJ:0 "Iberian"
+  SPR_Doriot_lb_ADJ:0 "Iberian"
+  SPR_Doriot_ss_ADJ:0 "Iberian"
+  SPR_Doriot_jc_ADJ:0 "Iberian"
+  SPR_Doriot_ds_ADJ:0 "Iberian"
+  SPR_Doriot_cn_ADJ:0 "Iberian"
+  SPR_Doriot_an_ADJ:0 "Iberian"
+
+  SPR_Jean_ni:0 "Kingdom of Iberia"
+  SPR_Jean_ni_DEF:0 "Kingdom of Iberia"
+  SPR_Jean_ds:0 "Kingdom of Iberia"
+  SPR_Jean_ds_DEF:0 "Kingdom of Iberia"
+  SPR_Jean_rc:0 "Kingdom of Iberia"
+  SPR_Jean_rc_DEF:0 "Kingdom of Iberia"
+  SPR_Jean_an:0 "Kingdom of Iberia"
+  SPR_Jean_an_DEF:0 "Kingdom of Iberia"
+  SPR_Jean_cn:0 "Kingdom of Iberia"
+  SPR_Jean_cn_DEF:0 "Kingdom of Iberia"
+  SPR_Jean_lb:0 "Kingdom of Iberia"
+  SPR_Jean_lb_DEF:0 "Kingdom of Iberia"
+  SPR_Jean_ss:0 "Kingdom of Iberia"
+  SPR_Jean_ss_DEF:0 "Kingdom of Iberia"
+  SPR_Jean_jc:0 "Kingdom of Iberia"
+  SPR_Jean_jc_DEF:0 "Kingdom of Iberia"
+  SPR_Jean_ni_ADJ:0 "Iberian"
+  SPR_Jean_rc_ADJ:0 "Iberian"
+  SPR_Jean_lb_ADJ:0 "Iberian"
+  SPR_Jean_ss_ADJ:0 "Iberian"
+  SPR_Jean_jc_ADJ:0 "Iberian"
+  SPR_Jean_ds_ADJ:0 "Iberian"
+  SPR_Jean_cn_ADJ:0 "Iberian"
+  SPR_Jean_an_ADJ:0 "Iberian"
+
+  ##########################
   # PARTIES
   ##########################
 
