--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -343,3 +343,23 @@
  improved_decryption_with_lar_desc:0 "The development of more sophisticated computers allows for new applications of cryptanalysis methods like differencing, which can be used to break advanced cyphers when combined with new hand codebreaking methods."
  advanced_decryption_with_lar:1 "Decryption - Automated Deduction"
  advanced_decryption_desc_with_lar:0 "The increased computation power that improved our cryptanalysis so far threatens to create nearly unbreakable ciphers in the future. To stay ahead, we must be prepared to work more aggressively on gaining inside information on the technology."
+
+ special_forces_jet_trooper:0 "Jet Troopers"
+ special_forces_jet_trooper_desc:0 ""
+ jet_troopers:0 "Jet Troopers"
+ jet_troopers_desc:0 ""
+ jet_armor_0:0 "Jet Troopers"
+ jet_armor_0_desc:0 "Jet Troopers are units with incredible speed and versatility, equipped with Jet Packs that when activated will propel the user with a hydrogen-water chemical mixture at speeds and heights only imagined in the world of science fiction, however they require extensive training due to the equipment they utilize."
+
+ special_forces_jet_troopers_1:0 "Expanded Jet Capacitors"
+ special_forces_jet_troopers_1_desc:0 "By using heavily condensed helium instead of the traditional hydrogen-water vapours we are able to store larger quantites of fuel for our Jet Troops to use."
+ special_forces_jet_troopers_2:0 "Micro-Missile Launchers"
+ special_forces_jet_troopers_2_desc:0 "The light weight micro-missile launcher will make short work of fleshy targets within medium to long ranges, not recommended to be used indoors."
+ special_forces_jet_troopers_3:0 "Integrated Comms Systems"
+ special_forces_jet_troopers_3_desc:0 "Having every communication device within the Jet Troopers arsenal will mean greater unit capabilities and planning no matter the enviroment or sitation."
+ special_forces_jet_troopers_4:0 "Radium Plates"
+ special_forces_jet_troopers_4_desc:0 "Radium Plates are the finest lightweight armour choice for any special forces unit to equip themselves with, although it does have the added side effect of causing radiation sickness."
+ special_forces_jet_troopers_5:0 "Belt-fed Heavy Weaponary Systems"
+ special_forces_jet_troopers_5_desc:0 "Let the big guns do the talking with the newly designed belt-fed heavy weapons systems located just below the arm rack of the Jet suit."
+ special_forces_jet_troopers_6:0 "Long Range Thermal Scanners"
+ special_forces_jet_troopers_6_desc:0 "With Long Range Thermal Scanners no enemy will be able to hide from our Jump Troopers, no matter how far, small, or cold they may be."
