--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -2627,6 +2627,56 @@
   SPR_Jean_cn_ADJ:0 "Iberian"
   SPR_Jean_an_ADJ:0 "Iberian"
 
+  SPR_SP_ni:0 "Hispanic Empire"
+  SPR_SP_ni_DEF:0 "Hispanic Empire"
+  SPR_SP_ds:0 "Hispanic Empire"
+  SPR_SP_ds_DEF:0 "Hispanic Empire"
+  SPR_SP_rc:0 "Hispanic Empire"
+  SPR_SP_rc_DEF:0 "Hispanic Empire"
+  SPR_SP_an:0 "Hispanic Empire"
+  SPR_SP_an_DEF:0 "Hispanic Empire"
+  SPR_SP_cn:0 "Hispanic Empire"
+  SPR_SP_cn_DEF:0 "Hispanic Empire"
+  SPR_SP_lb:0 "Hispanic Empire"
+  SPR_SP_lb_DEF:0 "Hispanic Empire"
+  SPR_SP_ss:0 "Hispanic Empire"
+  SPR_SP_ss_DEF:0 "Hispanic Empire"
+  SPR_SP_jc:0 "Hispanic Empire"
+  SPR_SP_jc_DEF:0 "Hispanic Empire"
+  SPR_SP_ni_ADJ:0 "Hispanic"
+  SPR_SP_rc_ADJ:0 "Hispanic"
+  SPR_SP_lb_ADJ:0 "Hispanic"
+  SPR_SP_ss_ADJ:0 "Hispanic"
+  SPR_SP_jc_ADJ:0 "Hispanic"
+  SPR_SP_ds_ADJ:0 "Hispanic"
+  SPR_SP_cn_ADJ:0 "Hispanic"
+  SPR_SP_an_ADJ:0 "Hispanic"
+
+  SPR_MIL_ni:0 "Greater Spanish Republic"
+  SPR_MIL_ni_DEF:0 "Greater Spanish Republic"
+  SPR_MIL_ds:0 "Greater Spanish Republic"
+  SPR_MIL_ds_DEF:0 "Greater Spanish Republic"
+  SPR_MIL_rc:0 "Greater Spanish Republic"
+  SPR_MIL_rc_DEF:0 "Greater Spanish Republic"
+  SPR_MIL_an:0 "Greater Spanish Republic"
+  SPR_MIL_an_DEF:0 "Greater Spanish Republic"
+  SPR_MIL_cn:0 "Greater Spanish Republic"
+  SPR_MIL_cn_DEF:0 "Greater Spanish Republic"
+  SPR_MIL_lb:0 "Greater Spanish Republic"
+  SPR_MIL_lb_DEF:0 "Greater Spanish Republic"
+  SPR_MIL_ss:0 "Greater Spanish Republic"
+  SPR_MIL_ss_DEF:0 "Greater Spanish Republic"
+  SPR_MIL_jc:0 "Greater Spanish Republic"
+  SPR_MIL_jc_DEF:0 "Greater Spanish Republic"
+  SPR_MIL_ni_ADJ:0 "Spanish"
+  SPR_MIL_rc_ADJ:0 "Spanish"
+  SPR_MIL_lb_ADJ:0 "Spanish"
+  SPR_MIL_ss_ADJ:0 "Spanish"
+  SPR_MIL_jc_ADJ:0 "Spanish"
+  SPR_MIL_ds_ADJ:0 "Spanish"
+  SPR_MIL_cn_ADJ:0 "Spanish"
+  SPR_MIL_an_ADJ:0 "Spanish"
+
   ##########################
   # PARTIES
   ##########################
