--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -37,7 +37,15 @@
   PB_CoE_Spanish_Reconstruction:0 "Renew the Spanish Monarchy"
   PB_CoE_Spanish_Reconstruction_desc:0 "Under their luddite government, the Spanish saw a revival of monarchist nostalgia emerge among the middle and upper classes, informing government policy and the eventual decision to join the French in their crusade against the status quo. While we have defeated the monarch-friendly government, we haven't defeated the monarch-friendly people. It is perhaps in our best interest to restore the Spanish crown, but not under a Bourbon. Instead, a monarch that is willing to cooperate with Berlin and London is the better choice for the Spanish crown."
   PB_CoE_Catalan_Occitan_Union:0 "Catalan-Occitan Unification"
-  PB_CoE_Catalan_Occitan_Union_desc
+  PB_CoE_Catalan_Occitan_Union_desc:0 ""
+ 
+  PB_CoE_Transitional_Government_Poland:0 "Appoint a Warsaw Government"
+  PB_CoE_Transitional_Government_Poland_desc:0 "With the transitional government in place in the former Russian territory of Poland, a decision needs to be made on the future of Poland as a state. The choice is simple: Poland will either adopt a monarchy or become a liberal republic."
+  PB_CoE_Reviving_the_Commonwealth:0 "Reviving the Commonwealth Concept"
+  PB_CoE_Establish_the_Intermarium:0 "Establish the Międzymorze"
+  PB_CoE_Courland_Question:0 "Courland Question"
+  PB_CoE_Courland_Question_desc:0 "Courland has been historically associated with the Polish-Lithuanian Commonwealth. Should we return this piece of Baltic coast to the Commonwealth or allow it to decide its own fate later?"
+  PB_CoE_Prussian_Question:0 "East Prussian Question"
 
   Coe_get_topic_France:0 "§GFrance§!"
   Coe_get_topic_Spain:0 "§GSpain§!"
@@ -51,6 +59,8 @@
   PB_COE_PROPOSAL_DEXTER:0 "The \"§YDexter Plan§!\" is currently discussed."
   PB_COE_PROPOSAL_FRANCIA:0 "The \"§YRathenau Plan§!\" is currently discussed."
   PB_COE_PROPOSAL_SCHWARZ:0 "The \"§YSchwarz Plan§!\" is currently discussed."
+
+  POL_GOV:0 "Has chosen a §YPolish government§!."
 
   COE_IF_APPROVED:0 "\nIf the proposal is §Gapproved§!:" 
 
@@ -142,6 +152,13 @@
   COE.25.a:0 "Divide along the east and the west"
   COE.25.b:0 "Destroy the concept of Spain"
 
+  COE.44.t:0 "Conference of Europe: Polish-Ruthenian Border"
+  COE.44.d:0 "The border between the two new states of Poland and Belarus have been a topic of furious debate. With the unclear ethnic diversity of the region as a result of years and years of Russian interference, there is no clear border to be drawn that will appease every community. The Polish delegation and Belarussian delegation have thus drawn up two proposals: \n\nBelarus has proposed that, if they're forced to cede territory, that it would depart with its Russopolish majority regions. The delegation states that Poland has only a legitimate claim to this region of Belarus, as it holds a majority of people that are close to the Polish culture and community instead of the Belarussian one. \n\nThe Polish delegation, spurred on by nationalists at home, have proposed a rather radical option, which forces Belarus to cede its Russopolish parts and the Wilno-Vilnius region. Despite these parts housing a Belarussian majority, the Polish delegation claims the territory as historically important to Poland. \n\nWith which plan do we go?"
+  COE.44.a:0 "Adopt the Belarussian Plan"
+  COE.44.b:0 "The Belarussian Plan, but fix the Vilnius Situation"
+  COE.44.c:0 "Adopt the Polish Plan"
+  
+
   COEDEXTER.1.t:0 "The Discussion of a Jewish Homeland"
   COEDEXTER.1.d:0 "As British diplomats seek to further placate us with their Dexter Plan, the proposal of German diplomats to carve some territory away from France and give it to the Jewish people has been given the green light by the Brits. The Jewish people have suffered immensely under the French dictatorship, seeing themselves stripped from citizenship, property and sometimes their lives. The least we can do is come together and repay the Jewish people, a globally persecuted people, with their own homeland in France. \n\nThe question now remains which French state to grant the Jewish people. Preferably, the territory has a coast and isn't already claimed by another country."
   
@@ -193,6 +210,34 @@
   OFA_KINGDOM:0 "Kingdom of France"
   OFA_KINGDOM_DEF:0 "The Kingdom of France"
   OFA_KINGDOM_ADJ:0 "French"
+
+  POL_REPUBLIC:0 "Republic of Poland"
+  POL_REPUBLIC_DEF:0 "the Republic of Poland"
+  POL_REPUBLIC_ADJ:0 "Polish"
+
+  POL_MONARCHY:0 "Kingdom of Poland"
+  POL_MONARCHY_DEF:0 "the Kingdom of Poland"
+  POL_MONARCHY_ADJ:0 "Polish"
+
+  POL_MONARCHY_GER:0 "Kingdom of Poland"
+  POL_MONARCHY_GER_DEF:0 "the Kingdom of Poland"
+  POL_MONARCHY_GER_ADJ:0 "Polish"
+
+  POL_MONARCHY_SWE:0 "Kingdom of Poland"
+  POL_MONARCHY_SWE_DEF:0 "the Kingdom of Poland"
+  POL_MONARCHY_SWE_ADJ:0 "Polish"
+
+  POL_Commonwealth:0 "Polish-Lithuanian Commonwealth"
+  POL_Commonwealth_DEF:0 "The Polish-Lithuanian Commonwealth"
+  POL_Commonwealth_ADJ:0 "Polish-Lithuanian"
+
+  POL_Intermarium:0 "Międzymorze Federation"
+  POL_Intermarium_DEF:0 "the Międzymorze Federation"
+  POL_Intermarium_ADJ:0 "Międzymorze"
+
+  BAL_UNION:0 "Baltic Federation"
+  BAL_UNION_DEF:0 "the Baltic Federation"
+  BAL_UNION_ADJ:0 "Baltic"
 
   #Ideas
  
