Peace Deal Work

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -2678,6 +2678,110 @@
   SPR_MIL_an_ADJ:0 "Spanish"
 
   ##########################
+  # FRENCH COLLABORATION IN SCANDI
+  ##########################
+
+  SND_SP_ni:0 "Empire Of The Great North"
+  SND_SP_ni_DEF:0 "Empire Of The Great North"
+  SND_SP_ds:0 "Empire Of The Great North"
+  SND_SP_ds_DEF:0 "Empire Of The Great North"
+  SND_SP_rc:0 "Empire Of The Great North"
+  SND_SP_rc_DEF:0 "Empire Of The Great North"
+  SND_SP_an:0 "Empire Of The Great North"
+  SND_SP_an_DEF:0 "Empire Of The Great North"
+  SND_SP_cn:0 "Empire Of The Great North"
+  SND_SP_cn_DEF:0 "Empire Of The Great North"
+  SND_SP_lb:0 "Empire Of The Great North"
+  SND_SP_lb_DEF:0 "Empire Of The Great North"
+  SND_SP_ss:0 "Empire Of The Great North"
+  SND_SP_ss_DEF:0 "Empire Of The Great North"
+  SND_SP_jc:0 "Empire Of The Great North"
+  SND_SP_jc_DEF:0 "Empire Of The Great North"
+  SND_SP_ni_ADJ:0 "Scandinavian"
+  SND_SP_rc_ADJ:0 "Scandinavian"
+  SND_SP_lb_ADJ:0 "Scandinavian"
+  SND_SP_ss_ADJ:0 "Scandinavian"
+  SND_SP_jc_ADJ:0 "Scandinavian"
+  SND_SP_ds_ADJ:0 "Scandinavian"
+  SND_SP_cn_ADJ:0 "Scandinavian"
+  SND_SP_an_ADJ:0 "Scandinavian"
+
+  DEN_Armand_ni:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_ni_DEF:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_ds:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_ds_DEF:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_rc:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_rc_DEF:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_an:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_an_DEF:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_cn:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_cn_DEF:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_lb:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_lb_DEF:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_ss:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_ss_DEF:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_jc:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_jc_DEF:0 "Danish Peasants and Workers Republic"
+  DEN_Armand_ni_ADJ:0 "Danish"
+  DEN_Armand_rc_ADJ:0 "Danish"
+  DEN_Armand_lb_ADJ:0 "Danish"
+  DEN_Armand_ss_ADJ:0 "Danish"
+  DEN_Armand_jc_ADJ:0 "Danish"
+  DEN_Armand_ds_ADJ:0 "Danish"
+  DEN_Armand_cn_ADJ:0 "Danish"
+  DEN_Armand_an_ADJ:0 "Danish"
+
+  SND_Jean_ni:0 "Empire of Scandinavia"
+  SND_Jean_ni_DEF:0 "Empire of Scandinavia"
+  SND_Jean_ds:0 "Empire of Scandinavia"
+  SND_Jean_ds_DEF:0 "Empire of Scandinavia"
+  SND_Jean_rc:0 "Empire of Scandinavia"
+  SND_Jean_rc_DEF:0 "Empire of Scandinavia"
+  SND_Jean_an:0 "Empire of Scandinavia"
+  SND_Jean_an_DEF:0 "Empire of Scandinavia"
+  SND_Jean_cn:0 "Empire of Scandinavia"
+  SND_Jean_cn_DEF:0 "Empire of Scandinavia"
+  SND_Jean_lb:0 "Empire of Scandinavia"
+  SND_Jean_lb_DEF:0 "Empire of Scandinavia"
+  SND_Jean_ss:0 "Empire of Scandinavia"
+  SND_Jean_ss_DEF:0 "Empire of Scandinavia"
+  SND_Jean_jc:0 "Empire of Scandinavia"
+  SND_Jean_jc_DEF:0 "Empire of Scandinavia"
+  SND_Jean_ni_ADJ:0 "Scandinavian"
+  SND_Jean_rc_ADJ:0 "Scandinavian"
+  SND_Jean_lb_ADJ:0 "Scandinavian"
+  SND_Jean_ss_ADJ:0 "Scandinavian"
+  SND_Jean_jc_ADJ:0 "Scandinavian"
+  SND_Jean_ds_ADJ:0 "Scandinavian"
+  SND_Jean_cn_ADJ:0 "Scandinavian"
+  SND_Jean_an_ADJ:0 "Scandinavian"
+
+  DEN_MIL_ni:0 "Denmark"
+  DEN_MIL_ni_DEF:0 "Denmark"
+  DEN_MIL_ds:0 "Denmark"
+  DEN_MIL_ds_DEF:0 "Denmark"
+  DEN_MIL_rc:0 "Denmark"
+  DEN_MIL_rc_DEF:0 "Denmark"
+  DEN_MIL_an:0 "Denmark"
+  DEN_MIL_an_DEF:0 "Denmark"
+  DEN_MIL_cn:0 "Denmark"
+  DEN_MIL_cn_DEF:0 "Denmark"
+  DEN_MIL_lb:0 "Denmark"
+  DEN_MIL_lb_DEF:0 "Denmark"
+  DEN_MIL_ss:0 "Denmark"
+  DEN_MIL_ss_DEF:0 "Denmark"
+  DEN_MIL_jc:0 "Denmark"
+  DEN_MIL_jc_DEF:0 "Denmark"
+  DEN_MIL_ni_ADJ:0 "Danish"
+  DEN_MIL_rc_ADJ:0 "Danish"
+  DEN_MIL_lb_ADJ:0 "Danish"
+  DEN_MIL_ss_ADJ:0 "Danish"
+  DEN_MIL_jc_ADJ:0 "Danish"
+  DEN_MIL_ds_ADJ:0 "Danish"
+  DEN_MIL_cn_ADJ:0 "Danish"
+  DEN_MIL_an_ADJ:0 "Danish"
+
+  ##########################
   # PARTIES
   ##########################
 
