--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8650,6 +8650,31 @@ SAN_an_ADJ:0 "Indian"
  LON_cn_ADJ:0 "Londoner"
  LON_an_ADJ:0 "Londoner"
 
+ SND_ni:0 "Scandinavia"
+ SND_ni_DEF:0 "Scandinavia"
+ SND_ds:0 "Scandinavia"
+ SND_ds_DEF:0 "Scandinavia"
+ SND_rc:0 "Scandinavia"
+ SND_rc_DEF:0 "Scandinavia"
+ SND_an:0 "Scandinavia"
+ SND_an_DEF:0 "Scandinavia"
+ SND_cn:0 "Scandinavia"
+ SND_cn_DEF:0 "Scandinavia"
+ SND_lb:0 "Scandinavia"
+ SND_lb_DEF:0 "Scandinavia"
+ SND_ss:0 "Scandinavia"
+ SND_ss_DEF:0 "Scandinavia"
+ SND_jc:0 "Scandinavia"
+ SND_jc_DEF:0 "Scandinavia"
+ SND_ni_ADJ:0 "Scandinavian"
+ SND_rc_ADJ:0 "Scandinavian"
+ SND_lb_ADJ:0 "Scandinavian"
+ SND_ss_ADJ:0 "Scandinavian"
+ SND_jc_ADJ:0 "Scandinavian"
+ SND_ds_ADJ:0 "Scandinavian"
+ SND_cn_ADJ:0 "Scandinavian"
+ SND_an_ADJ:0 "Scandinavian"
+
 
 
 ###################################
