Peace Deal Work + Bug Fixes

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -1243,7 +1243,7 @@
   PB_FRA_Shadow_Government_desc:0 "Who is the boogeyman you may ask. Nobody truely knows, but rumours say that if you speak ill of the party then your days on earth can be counted in mere minutes, hours if your lucky. The boogeyman is ever vigilent and strikes only when neccesary. He is ever present and all knowing and to hate the boogeyman is to hate yourself. So love the boogeyman if you wish to see the morning sun."
   PB_FRA_Cloak_and_Dagger:0 "Cloak and Dagger"
   PB_FRA_Cloak_and_Dagger_desc:0 "The intellectuals of our nation are a core threat to the state we invision France to one day be. It is with a heavy heart that we need to purge even our ranks of thoughts that may hinder our progress in building this new France, anything and everything can in some way threaten us.\n\n'A foundation that is rotten can collapse at any moment'."
-  PB_FRA_Esotericism:0 "Introduce Estotericism"
+  PB_FRA_Esotericism:0 "Introduce Esotericism"
   PB_FRA_Esotericism_desc:0 "With a new government comes new ideas. With the SP in power beliefs in the occult and other mythical concepts have sharply arisen, with government support that is. Many have taken a keen interest in new ideological beliefs around culture and religion and the reality of which they reside in, and the SP couldn't love this fact more."
   PB_FRA_SP_Dominance:0 "Ideology in All Aspects of Life"
   PB_FRA_SP_Dominance_desc:0 "The SP government has taken upon itself to influence every aspect of daily life with neo-imperialist ideology. They have mainly done this with propaganda means but also a system of he/she tell, where any reports of out of line thinking being brutally cracked down on; with death sentences being handed out daily. "
@@ -2780,6 +2780,56 @@
   DEN_MIL_ds_ADJ:0 "Danish"
   DEN_MIL_cn_ADJ:0 "Danish"
   DEN_MIL_an_ADJ:0 "Danish"
+
+  SWE_Armand_ni:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_ni_DEF:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_ds:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_ds_DEF:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_rc:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_rc_DEF:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_an:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_an_DEF:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_cn:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_cn_DEF:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_lb:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_lb_DEF:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_ss:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_ss_DEF:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_jc:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_jc_DEF:0 "Swedish Peasants and Workers Republic"
+  SWE_Armand_ni_ADJ:0 "Swedish"
+  SWE_Armand_rc_ADJ:0 "Swedish"
+  SWE_Armand_lb_ADJ:0 "Swedish"
+  SWE_Armand_ss_ADJ:0 "Swedish"
+  SWE_Armand_jc_ADJ:0 "Swedish"
+  SWE_Armand_ds_ADJ:0 "Swedish"
+  SWE_Armand_cn_ADJ:0 "Swedish"
+  SWE_Armand_an_ADJ:0 "Swedish"
+
+  SWE_Doriot_ni:0 "Swedish National Republic"
+  SWE_Doriot_ni_DEF:0 "Swedish National Republic"
+  SWE_Doriot_ds:0 "Swedish National Republic"
+  SWE_Doriot_ds_DEF:0 "Swedish National Republic"
+  SWE_Doriot_rc:0 "Swedish National Republic"
+  SWE_Doriot_rc_DEF:0 "Swedish National Republic"
+  SWE_Doriot_an:0 "Swedish National Republic"
+  SWE_Doriot_an_DEF:0 "Swedish National Republic"
+  SWE_Doriot_cn:0 "Swedish National Republic"
+  SWE_Doriot_cn_DEF:0 "Swedish National Republic"
+  SWE_Doriot_lb:0 "Swedish National Republic"
+  SWE_Doriot_lb_DEF:0 "Swedish National Republic"
+  SWE_Doriot_ss:0 "Swedish National Republic"
+  SWE_Doriot_ss_DEF:0 "Swedish National Republic"
+  SWE_Doriot_jc:0 "Swedish National Republic"
+  SWE_Doriot_jc_DEF:0 "Swedish National Republic"
+  SWE_Doriot_ni_ADJ:0 "Swedish"
+  SWE_Doriot_rc_ADJ:0 "Swedish"
+  SWE_Doriot_lb_ADJ:0 "Swedish"
+  SWE_Doriot_ss_ADJ:0 "Swedish"
+  SWE_Doriot_jc_ADJ:0 "Swedish"
+  SWE_Doriot_ds_ADJ:0 "Swedish"
+  SWE_Doriot_cn_ADJ:0 "Swedish"
+  SWE_Doriot_an_ADJ:0 "Swedish"
 
   ##########################
   # PARTIES
