--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -743,7 +743,7 @@
  STATE_742:0 "Ferghana"
  STATE_743:0 "Qingdao"
  STATE_744:0 "Xian"
- STATE_745:0 "Ryojun"
+ STATE_745:0 "Port Arthur"
  STATE_746:0 "Ordos"
  STATE_747:0 "Dali"
  STATE_748:0 "Zunyi"
