--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -398,7 +398,7 @@
  VICTORY_POINTS_12421:0 "Asahigawa"
  VICTORY_POINTS_12446:0 "Vladimirovka"
  VICTORY_POINTS_11932:0 "Naha"
- VICTORY_POINTS_1150:0 "Ryojun"
+ VICTORY_POINTS_1150:0 "Port Arthur"
  VICTORY_POINTS_4572:0 "Hsinking"
  VICTORY_POINTS_4052:0 "Pyongyang"
  VICTORY_POINTS_4056:0 "Busan"
