--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -4725,8 +4725,8 @@ SAN_an_ADJ:0 "Indian"
 
  GRE_ni:0 "Hellenic State"
  GRE_ni_DEF:0 "The Hellenic State"
- GRE_ds:0 "Hellenic State"
- GRE_ds_DEF:0 "The Hellenic State"
+ GRE_ds:0 "Kingdom of Greece"
+ GRE_ds_DEF:0 "The Kingdom of Greece"
  GRE_rc:0 "Hellenic Republic"
  GRE_rc_DEF:0 "The Hellenic Republic"
  GRE_an:0 "Hellenic Republic"
