--- a/localisation/english/PB_Greece_l_english.yml
+++ b/localisation/english/PB_Greece_l_english.yml
@@ -1,26 +1,41 @@
 ﻿l_english:
 
   ##########################
+  # LEADER DESC/LEADER TRAITS
+  ##########################
+
+  PB_GRE_Constantine_I_DESC:0 "§YBorn:§! 2/8/1868\n\nConstantine I, the King who would reconquer Constantinople, has achieved immense popularity amongst the Greek populace ever since the successful transfer of the Western Turkish states from the Russian client state of the ottoman Empire. Known as the Aegean treaty of 1914, Greece would be granted large swaths of Turkish lands in exchange for a semi-permanent Russian military presence. That as well as an almost total Russian economic dominance in the Greek military-industrial complex. Critics say that Constantine I had surrendered his nations independence to Russia, but it is undeniable to mention the popularity and prestige such a deal gave to the Kingdom of Greece.\n\nConstantine I has increasingly sided with autocrats and reactionaries within the Greek parliament, expanding both the military budget to appease generals and admirals alike, as well as cracking down on individual freedoms. However, the King is old, and his time may soon come to abdicate to his son George II, but there a rumours behind the triumphant banners of this ascendant Greek state that there are those that wish to return to the Republic of old."
+  PB_King_Of_The_Greeks:0 "King of the Greeks"
+
+  ##########################
   # IDEAS
   ##########################
+
+  PB_GRE_Greece_Ascendant:0 "Greece Ascendant"
+  PB_GRE_Greece_Ascendant_desc:0 "Greece has moulded itself an empire under the leadership of Constantine I, going from a struggling city state to one of the most well established and prestigious kingdoms of Europe. While the Greek Kingdom is nowhere close to the scale of the Byzantines or even Alexanders' Empire it certainly has the ambition to reach, or even surpass these empires of old. Greece will forge itself an age of prosperity, by pen or iron will."
+  PB_GRE_Russan_Economic_Dominance:0 "Russian Economic Dominance"
+  PB_GRE_Russan_Economic_Dominance_desc:0 "Following the Aegean treaty of 1914 Greece gave up much of its industrial independence to Russia in exchange for Turkish lands, while some would say the deal was worth while that doesn't change the fact that most of the Greek military industry lays subject to Russian economic interests."
+  PB_GRE_Fading_Democracy:0 "Fading Democracy"
+  PB_GRE_Fading_Democracy_desc:0 "Greece's proud history of democracy is slowly coming to an end. As Constantine I passes more laws that restrict political freedoms whilst boosting the power of himself and his supporters it seems that Greece is fast on track to become yet another authoritarian state in Europe, one singing the same promises as all the others."
 
   ##########################
   # PARTIES
   ##########################
-GRE_ni_party_long:0 "Komma Toov Eleutherofrovoov"
-GRE_ni_party:0 "KTE"
-GRE_ds_party_long:0 "House of Saxe-Coburg and Gotha"
-GRE_ds_party:0 "Saxe-Coburg and Gotha"
-GRE_rc_party_long:0 "Elleviké Énoose"
-GRE_rc_party:0 "EE"
-GRE_cn_party_long:0 "Laïkòv Kómma"
-GRE_cn_party:0 "LK"
-GRE_lb_party_long:0 "Kómma Fileleuthéroon"
-GRE_lb_party:0 "KF"
-GRE_ss_party_long:0 "Agrotikón Ergatikón Kómma"
-GRE_ss_party:0 "AEK"
-GRE_jc_party_long:0 "Sosialistikó Ergatikó Kómma Elládas"
-GRE_jc_party:0 "SEKE"
+  GRE_ni_party_long:0 "Komma Toov Eleutherofrovoov"
+  GRE_ni_party:0 "KTE"
+  GRE_ds_party_long:0 "House of Saxe-Coburg and Gotha"
+  GRE_ds_party:0 "Saxe-Coburg and Gotha"
+  GRE_rc_party_long:0 "Elleviké Énoose"
+  GRE_rc_party:0 "EE"
+  GRE_cn_party_long:0 "Laïkòv Kómma"
+  GRE_cn_party:0 "LK"
+  GRE_lb_party_long:0 "Kómma Fileleuthéroon"
+  GRE_lb_party:0 "KF"
+  GRE_ss_party_long:0 "Agrotikón Ergatikón Kómma"
+  GRE_ss_party:0 "AEK"
+  GRE_jc_party_long:0 "Sosialistikó Ergatikó Kómma Elládas"
+  GRE_jc_party:0 "SEKE"
+
   ##########################
   # EVENTS
   ##########################
