--- a/localisation/english/PB_Greece_l_english.yml
+++ b/localisation/english/PB_Greece_l_english.yml
@@ -11,12 +11,12 @@
   # IDEAS
   ##########################
 
-  PB_GRE_Greece_Ascendant:0 "Greece Ascendant"
-  PB_GRE_Greece_Ascendant_desc:0 "Greece has moulded itself an empire under the leadership of Constantine I, going from a struggling city state to one of the most well established and prestigious kingdoms of Europe. While the Greek Kingdom is nowhere close to the scale of the Byzantines or even Alexanders' Empire it certainly has the ambition to reach, or even surpass these empires of old. Greece will forge itself an age of prosperity, by pen or iron will."
+  PB_GRE_Greece_Ascendant:0 "Path towards Enosis"
+  PB_GRE_Greece_Ascendant_desc:0 "Whatever one may think of the methods of Constantine I or his loyal cabinet, few Greeks will deny the national pride they feel for Constantine's success with the Russians. Cunning diplomacy and the right geopolitical pressure allowed Greece to force Russia into favourable terms, paving the first stone of the path towards Enosis (the union of all Greeks under a single, Greek state). \n\nThe partial victory of Enosis in Anatolia emboldened the nationalist elements of Greek civil society and the military. Youth clubs, hiking organisations and illegal military circles are all loyal to the furthering of Enosis and the related Megali Idea, seeking to bring the remaining Greek territories into a single state. Territories like Cyprus, Northern Albania, Constantinople, Trebizond and the rest of the Aegean Coast all house Greek communities and are thus, along the lines of both revanchist dreaming and government policy, legitimate targets for further Greek expansion."
   PB_GRE_Russan_Economic_Dominance:0 "Russian Economic Dominance"
   PB_GRE_Russan_Economic_Dominance_desc:0 "Following the Aegean treaty of 1914 Greece gave up much of its industrial independence to Russia in exchange for Turkish lands, while some would say the deal was worth while that doesn't change the fact that most of the Greek military industry lays subject to Russian economic interests."
-  PB_GRE_Fading_Democracy:0 "Fading Democracy"
-  PB_GRE_Fading_Democracy_desc:0 "Greece's proud history of democracy is slowly coming to an end. As Constantine I passes more laws that restrict political freedoms whilst boosting the power of himself and his supporters it seems that Greece is fast on track to become yet another authoritarian state in Europe, one singing the same promises as all the others."
+  PB_GRE_Fading_Democracy:0 "Slide into Royalism"
+  PB_GRE_Fading_Democracy_desc:0 "The democracy that was brought to Greece in the wake of the its war of independence against the Ottoman Turks has always been at odds with its monarchy. For as long as the crown of the Hellenes was established, the monarchy has tried to chain parliament and the political parties, while parliament itself has often tried to bind the monarch to constitutional guarantees and civil rights. Especially the liberal-minded politicians of Greece tried to impose this Frankfurt-style of democracy on Greece, but the conservative landowners remained staunch allies of the king, keeping parliament from cementing any formal guarantee in the constitution. The last attempt was made in 1909, when Venizelos failed to amend the constitution by abolishing the royal veto. \n\nThis war against the monarchy turned during the Great War, as Constantine I brought Greece regional power status with the Aegean Treaty, enforcing the first step towards Enosis. The success of the monarchy turned parliament on its head. Royalist allies won a majority in parliament in 1916 and have hold onto their mandate ever since. With them in control, the Greek monarchy has been able to thrive and centralize, forcing political opponents underground and binding Venizelos to the role of powerless opposition. With a slow decline of checks and balances surrounding the king's priviliges and power, it is safe to assume that post-independence democracy will not survive the coming decade."
 
   ##########################
   # PARTIES
@@ -40,3 +40,12 @@
   # EVENTS
   ##########################
 
+  ##########################
+  # MINISTERS
+  ##########################
+  GRE_PB_Ioannis_Metaxas_IAM:0 "Ioannis Metaxas"
+  GRE_PB_Dimitrios_Gounaris_HOG:0 "Dimitrios Gounaris"
+  GRE_PB_Ioannis_Theotokis_ECM:0 "Ioannis Theotokis"
+  GRE_PB_Konstantinos_Georgakopoulos_FAM:0 "Konstantinos Georgakopoulos"
+
+  PB_Skilled_Orator:0 "Skilled Orator"
