I love this peace deal system (Not!)

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -2831,6 +2831,56 @@
   SWE_Doriot_cn_ADJ:0 "Swedish"
   SWE_Doriot_an_ADJ:0 "Swedish"
 
+  NOR_Armand_ni:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_ni_DEF:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_ds:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_ds_DEF:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_rc:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_rc_DEF:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_an:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_an_DEF:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_cn:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_cn_DEF:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_lb:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_lb_DEF:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_ss:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_ss_DEF:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_jc:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_jc_DEF:0 "Norwegian Peasants and Workers Republic"
+  NOR_Armand_ni_ADJ:0 "Norwegian"
+  NOR_Armand_rc_ADJ:0 "Norwegian"
+  NOR_Armand_lb_ADJ:0 "Norwegian"
+  NOR_Armand_ss_ADJ:0 "Norwegian"
+  NOR_Armand_jc_ADJ:0 "Norwegian"
+  NOR_Armand_ds_ADJ:0 "Norwegian"
+  NOR_Armand_cn_ADJ:0 "Norwegian"
+  NOR_Armand_an_ADJ:0 "Norwegian"
+
+  NOR_Doriot_ni:0 "Norwegian State"
+  NOR_Doriot_ni_DEF:0 "Norwegian State"
+  NOR_Doriot_ds:0 "Norwegian State"
+  NOR_Doriot_ds_DEF:0 "Norwegian State"
+  NOR_Doriot_rc:0 "Norwegian State"
+  NOR_Doriot_rc_DEF:0 "Norwegian State"
+  NOR_Doriot_an:0 "Norwegian State"
+  NOR_Doriot_an_DEF:0 "Norwegian State"
+  NOR_Doriot_cn:0 "Norwegian State"
+  NOR_Doriot_cn_DEF:0 "Norwegian State"
+  NOR_Doriot_lb:0 "Norwegian State"
+  NOR_Doriot_lb_DEF:0 "Norwegian State"
+  NOR_Doriot_ss:0 "Norwegian State"
+  NOR_Doriot_ss_DEF:0 "Norwegian State"
+  NOR_Doriot_jc:0 "Norwegian State"
+  NOR_Doriot_jc_DEF:0 "Norwegian State"
+  NOR_Doriot_ni_ADJ:0 "Norwegian"
+  NOR_Doriot_rc_ADJ:0 "Norwegian"
+  NOR_Doriot_lb_ADJ:0 "Norwegian"
+  NOR_Doriot_ss_ADJ:0 "Norwegian"
+  NOR_Doriot_jc_ADJ:0 "Norwegian"
+  NOR_Doriot_ds_ADJ:0 "Norwegian"
+  NOR_Doriot_cn_ADJ:0 "Norwegian"
+  NOR_Doriot_an_ADJ:0 "Norwegian"
+
   ##########################
   # PARTIES
   ##########################
