--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -8,6 +8,14 @@
   ##########################
 
   POLITICS_Smedley_Butler_Exile_DESC:0 "§YBorn:§! 30/7/1881\n\n§YSmedley Butler§! is failed man with a failed dream. With the defeat of the American-Jacobin Revolution Butler and his disciples marched west into untamed America in hopes of a new life. The result was the death of many and those who were the "lucky" bunch soon found out why the settlers of the old America failed in their ambitions. Whilst their greatest foe is the Commonwealth, second ranks nature and her desire to elevate the human struggle to the rest of the animal kingdom.\n\nNow begins the greatest test of all, to see what it truely takes to break a man, and an idea.\n\n§RSic semper tyrannis§! is a Latin phrase meaning "thus always to tyrants". It suggests that bad outcomes should or eventually will befall tyrants, and that shall be out motto."
+  
+  ##########################
+  # AGGRESIVE EXPANSION
+  ##########################
+
+  Aggressive_Expansion_tt:0 "§RAggressive Expansion§!:\nAggressive Expansion is a measure of how warlike your nation is perceived by other American tags, the higher your AE is the more likely the ai is going to send volunteers and lend lease to any nation you might be at war with. Too high AE may see the remaining minor American tags form a coalition against you, and even United Commonwealth involvement. The actual amount of AE you have accumulated is hidden so consider more diplomatic annexation options instead of outright declaring war."
+  SCA_Increase_AE_Small_tt:0 "£GFX_SCA_AE AE will slightly §Rincrease!§!"
+  SCA_Increase_AE_Avg_tt:0 "£GFX_SCA_AE AE will significantly §Rincrease!§!"
 
   ##########################
   # IDEAS
@@ -109,6 +117,10 @@
   SCA_The_Tamed_West_1:0 "Tamed West (1)"
   SCA_The_Tamed_West_2:0 "Tamed West (2)"
   SCA_The_Tamed_West_3:0 "Tamed West (3)"
+
+  PB_SCA_Uniting_America:0 "Uniting America"
+  SCA_Integrate_New_Walden:0 "Integrate New Walden"
+  SCA_Integrate_Portland:0 "Integrate Portland"
 
   ##########################
   # DYNAMIC MODIFIERS
@@ -233,6 +245,9 @@
   SCA_The_Portland_Compromise:0 "The Portland Compromise"
   SCA_The_Portland_Compromise_desc:0 "The citizens of New Virginia similarly share our states admiration for George Washington and what he represented, should we focus on this common ground we could convince the nation of New Virginia to peacefully join our cause."
 
+  SCA_The_Revolutionary_State_Of_Portland:0 "The Revolutionary State Of Portland"
+  SCA_The_Revolutionary_State_Of_Portland_desc:0 ""
+
   SCA_False_Heirs_No_More:0 "False Heirs No More"
   SCA_False_Heirs_No_More_desc:0 "These fools in Portland believe that they are the true descendants of Washington's inner circle, the last true remants of the American revolutionaries of old. Although these are simply lies created by New Virginia to give credence to their goals the mere presence of such a state directly threatens our Utopian dream, destruction is the only option to safeguard our ideals. "
 
@@ -247,6 +262,9 @@
 
   SCA_Similar_Peoples_Similar_Goals:0 "Similar Peoples, Similar Goals"
   SCA_Similar_Peoples_Similar_Goals_desc:0 "New Walden is another state trying to achieve the Utopia dream, however they have been corrupted by and have come to twisted conclusions. We should reach out to them and inform them that we too wish for this great utopia, one that has stayed true to the cause."
+
+  SCA_The_Revolutionary_State_Of_New_Walden:0 "The Revolutionary State Of New Walden"
+  SCA_The_Revolutionary_State_Of_New_Walden_desc:0 ""
 
   SCA_There_Can_Only_Be_One:0 "There Can Only Be One"
   SCA_There_Can_Only_Be_One_desc:0 "There are those that reject the Jacobin cause, follow it, and twist it.  New Walden has drifted off the true path to the great utopian dream and have come crash landing into blind devotion to natures lure, we will reveal to them the true threat, and the true way to deal with it."
@@ -461,8 +479,8 @@
 
   SCA_New_Flag:0 "The SCA will receive a new §YFlag§!"
 
-  SCA_The_Portland_Compromise_tt:0 "\n§gShould§! [TAC.getflag] §YNew Virginia§! §gagree to our demands we will annex them and gain all their generals§!"
-  SCA_Similar_Peoples_Similar_Goals_tt:0 "\n§gShould§! [NWA.getflag] §YNew Walden§! §gagree to our demands we will annex them and gain all their generals§!"
+  SCA_The_Portland_Compromise_tt:0 "\n§gShould§! [TAC.getflag] §YNew Virginia§! §gagree to our demands we will annex them and gain all their generals and divisions§!"
+  SCA_Similar_Peoples_Similar_Goals_tt:0 "\n§gShould§! [NWA.getflag] §YNew Walden§! §gagree to our demands we will annex them and gain all their generals and divisions§!"
   
   SCA_The_Butlerite_Proclamation_tt:0 "Smedley Butler will be given full dictatorial powers and Congress will be sidelined. This path will eventually lead to the formation of the §YNorth American Peasants and Workers Republic§!.\n\n"
   SCA_Dawn_Of_The_Peoples_Council_tt:0 "\nCongress will achieve total control and Butler will be the first American President, his term will end with the unification of America . This path will eventually lead to the formation of the §YUnited States§!.\n\n"
@@ -517,6 +535,11 @@
 
   SCA_Establish_The_Comittee_For_State_Security_tt:0 "\nChanges the £GFX_decision_icon_small §HWith Open Eyes§! mission timer to now last 100 days instead of 60"
  
+  SCA_Portland_Said_Yes:0 "[TAC.getflag] Portland agreed to our demands"
+  SCA_New_Walden_Said_Yes:0 "[NWA.getflag] New Walden agreed to our demands"
+
+  SCA_Can_Core_This_State_Later_tt:0 "You will be able to §GCore§! this state later via a £GFX_decision_icon_small decision once the modifer has been removed"
+  
   ##########################
   # EVENTS
   ##########################
