--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -924,36 +924,36 @@
   French_postwar.5.a:0 "Find these criminals"
 
   French_postwar.6.t:0 "The British Royal Fleet"
-  French_postwar.6.d:0 ""
+  French_postwar.6.d:0 "Much of the British Royal Fleet remains mothballed in the ports of Scapa Flow and Dover, although a good chunk did flee across the remaining Empire. The Question now is what to do with these remaining ships?"
   French_postwar.6.a:0 "Seize them"
   French_postwar.6.b:0 "Scrap them"
 
   French_postwar.7.t:0 "The Future of London"
-  French_postwar.7.d:0 ""
+  French_postwar.7.d:0 "London, the capital of the British Empire now lays under our control. The city in certain aspects has become a nightmare to occupy because of its Megacity architecture and some are calling for a specialized administration to run the city."
   French_postwar.7.a:0 "Establish a garrison in London"
   French_postwar.7.b:0 "Place it under direct rule"
   French_postwar.7.c:0 "The sitaution will solve itself in time"
 
   French_postwar.8.t:0 "The Cornwall Garrison"
-  French_postwar.8.d:0 ""
+  French_postwar.8.d:0 "Cornwall currently resides as a heavily garrisoned state under our English puppet however French officials have called for full occupation instead of leaving the responsibility to our England. Alternatively, we could grant Hero of the French army Charles de Gaulle total unrestricted control over the region."
   French_postwar.8.a:0 "De Gaulle earned it"
   French_postwar.8.b:0 "France conquers all"
   French_postwar.8.c:0 "The English can handle it"
 
   French_postwar.9.t:0 "The Ulster Question"
-  French_postwar.9.d:0 ""
+  French_postwar.9.d:0 "Ireland has long laid claim to Ulster however many protestant Ulster-Scots take issue with being under a catholic government. We could directly administer the region or just hand them over to the Irish."
   French_postwar.9.a:0 "Establish a dependent Ulster state"
   French_postwar.9.b:0 "It belongs to Ireland"
   French_postwar.9.c:0 "Leave it be"
 
   French_postwar.10.t:0 "Respect Andorranes Sovereignty?"
-  French_postwar.10.d:0 ""
+  French_postwar.10.d:0 "The Bishopric of Andorra although inconsequential in European affairs is nothing more than an artifical state bordering our great nation, they have no army and we could swiftly finish them of with only a hand full of men. If we so wish. "
   French_postwar.10.a:0 "Seize the state"
   French_postwar.10.b:0 "Grant it to Spain"
   French_postwar.10.c:0 "They mean nothing to us"
 
   French_postwar.11.t:0 "Violate Swiss Neutrality?"
-  French_postwar.11.d:0 ""
+  French_postwar.11.d:0 "Switzerland has long remained neutral to both European and global affairs but there very presence poses a threat to the French state and her allies."
   French_postwar.11.a:0 "Establish a pro-French government"
   French_postwar.11.b:0 "Establish a pro-French government, but take Romande"
   French_postwar.11.c:0 "Switzerland is an important business partner"
@@ -1677,6 +1677,8 @@
   PB_FRA_Subject_Andorra_desc:0 "The Bishopric of Andorra although inconsequential in European affairs is nothing more than an artifical state bordering our great nation, they have no army and we could swiftly finish them of with only a hand full of men. If we so wish. "
   PB_FRA_Subject_Switzerland:0 "[SWI.GetFlag] Subject: Switzerland"
   PB_FRA_Subject_Switzerland_desc:0 "Switzerland has long remained neutral to both European and global affairs but there very presence poses a threat to the French state and her allies."
+  PB_FRA_Piedmont_Conference:0 "[IST.GetFlag] Subject: Piedmont Conference"
+  PB_FRA_Piedmont_Conference_desc:0 "Savoy and Nice are home to thousands of proud and loyal Frenchman housed under an Italian banner. While the Italian state may be an ally of France the French people come first in state interests, politics comes second."
 
   PB_FRA_Fund_The_Steelworks_Cat:0 "Heavy Industry Planning"
   PB_FRA_Fund_The_Steelworks_Cat_desc:0 "\n\n\n\n\n\nThe need for heavy industry is at a critical level. With the unemployement crisis leaving millions of French without jobs the supply of cheap, eager labour is at an all time high, a supply we will gracefully accept."
