--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -136,6 +136,8 @@
   SCA_Incite_Rev_In_IRO:0 "[IRO.GetFlag] Incite Revolution in [IRO.GetName]"
   SCA_Incite_Rev_In_MRN:0 "[MRN.GetFlag] Incite Revolution in [MRN.GetName]"
   SCA_Incite_Rev_In_OSA:0 "[OSA.GetFlag] Incite Revolution in [OSA.GetName]"
+  SCA_Incite_Rev_In_DER:0 "[DER.GetFlag] Incite Revolution in [DER.GetName]"
+  SCA_Incite_Rev_In_STA:0 "[STA.GetFlag] Incite Revolution in [STA.GetName]"
 
   ##########################
   # DYNAMIC MODIFIERS
