--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8675,6 +8675,31 @@ SAN_an_ADJ:0 "Indian"
  SND_cn_ADJ:0 "Scandinavian"
  SND_an_ADJ:0 "Scandinavian"
 
+ DER_ni:0 "Desert Rangers"
+ DER_ni_DEF:0 "The Desert Rangers"
+ DER_ds:0 "Desert Rangers"
+ DER_ds_DEF:0 "The Desert Rangers"
+ DER_rc:0 "Desert Rangers"
+ DER_rc_DEF:0 "The Desert Rangers"
+ DER_an:0 "Desert Rangers"
+ DER_an_DEF:0 "The Desert Rangers"
+ DER_cn:0 "Desert Rangers"
+ DER_cn_DEF:0 "The Desert Rangers"
+ DER_lb:0 "Desert Rangers"
+ DER_lb_DEF:0 "The Desert Rangers"
+ DER_ss:0 "Desert Rangers"
+ DER_ss_DEF:0 "The Desert Rangers"
+ DER_jc:0 "Desert Rangers"
+ DER_jc_DEF:0 "The Desert Rangers"
+ DER_ni_ADJ:0 "Trekker"
+ DER_rc_ADJ:0 "Trekker"
+ DER_lb_ADJ:0 "Trekker"
+ DER_ss_ADJ:0 "Trekker"
+ DER_jc_ADJ:0 "Trekker"
+ DER_ds_ADJ:0 "Trekker"
+ DER_cn_ADJ:0 "Trekker"
+ DER_an_ADJ:0 "Trekker"
+
 
 
 ###################################
